--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -107,7 +107,7 @@ jobs:
           ${{ fromJson(inputs.oss
                        || '["ubuntu-latest",
                             "ubuntu-24.04-arm",
-                            "macos-13",
+                            "macos-15-intel",
                             "macos-14",
                            ]') }}
     runs-on: ${{ matrix.os }}
@@ -196,7 +196,7 @@ jobs:
           case "${{ matrix.os }}" in
               ubuntu*-arm) tag="manylinux*_aarch64";;
               ubuntu*)  tag="manylinux*_x86_64";;
-              macos-13) tag="macosx_*_x86_64";;
+              macos-15-intel) tag="macosx_*_x86_64";;
               macos-14) tag="macosx_*_arm64";;
               windows*-arm) tag="win_arm64";;
               windows*) tag="win_amd64";;
