--- a/pkgs/sage-project-cookiecutter/sage_project_cookiecutter/sagemath-upstream-package-template/{{cookiecutter.project_name}}/.github/workflows/dist.yml
+++ b/pkgs/sage-project-cookiecutter/sage_project_cookiecutter/sagemath-upstream-package-template/{{cookiecutter.project_name}}/.github/workflows/dist.yml
@@ -47,7 +47,7 @@ jobs:
         arch:    [x86_64, i686, aarch64]
         build:   [manylinux, musllinux]
         include:
-          - os: macos-13
+          - os: macos-15-intel
             arch: x86_64
             build: macosx
           - os: macos-14
