--- a/.github/workflows/dist.yml
+++ b/.github/workflows/dist.yml
@@ -310,7 +310,7 @@ jobs:
           path: ./logs
 
   build_wheels:
-    name: wheels ${{ matrix.build }}*_${{ matrix.arch }}
+    name: wheels ${{ matrix.build }}*_${{ matrix.arch }} side A
     runs-on: ${{ matrix.os }}
     needs: [sdists_for_pypi, noarch_wheels_for_pypi]
     strategy:
@@ -342,7 +342,7 @@ jobs:
       # SPKGs to install as system packages
       SPKGS: _bootstrap _prereq liblzma bzip2 info libxml2 libuuid
       # Non-Python packages to install as spkgs
-      TARGETS_PRE: _cibuildwheel_local pip ${{ startsWith(matrix.os, 'ubuntu') && 'patchelf' || '' }}
+      TARGETS_PRE: _cibuildwheel_local_a pip ${{ startsWith(matrix.os, 'ubuntu') && 'patchelf' || '' }}
       CIBW_BUILD: "*${{ matrix.build }}*"
       #
       CIBW_ARCHS: ${{ matrix.arch }}
@@ -708,7 +708,7 @@ jobs:
           path: ./logs
 
   build_optional_wheels:
-    name: wheels ${{ matrix.build }}*_${{ matrix.arch }} optional
+    name: wheels ${{ matrix.build }}*_${{ matrix.arch }} side B
     if: (success() || failure())
     runs-on: ${{ matrix.os }}
     needs: [sdists_for_pypi, noarch_wheels_for_pypi, build_wheels]
@@ -741,7 +741,7 @@ jobs:
       # SPKGs to install as system packages
       SPKGS: _bootstrap _prereq liblzma bzip2 info libxml2
       # Non-Python packages to install as spkgs
-      TARGETS_PRE: _cibuildwheel_local ${{ startsWith(matrix.os, 'ubuntu') && 'patchelf' || '' }}
+      TARGETS_PRE: _cibuildwheel_local_b ${{ startsWith(matrix.os, 'ubuntu') && 'patchelf' || '' }}
       CIBW_BUILD: "*${{ matrix.build }}*"
       #
       CIBW_ARCHS: ${{ matrix.arch }}
