Handle 'configure --with-sage-venv=none' via 'SAGE_VENV_FLAGS=DISABLED'

--- a/configure.ac
+++ b/configure.ac
@@ -93,7 +93,7 @@ fi
 SAGE_SRC="$SAGE_ROOT/src"
 
 AC_ARG_WITH([sage-venv],
-            [AS_HELP_STRING([--with-sage-venv={auto (default),yes,no,SAGE_VENV}],
+            [AS_HELP_STRING([--with-sage-venv={auto (default),yes,no,none,SAGE_VENV}],
                             [put Python packages into an installation hierarchy separate from prefix])],
             [SAGE_VENV="$withval"],
             [SAGE_VENV="auto"])
