pkgs/sage-conf_pypi/tox.ini: Update tested python versions

--- a/pkgs/sage-conf_pypi/tox.ini
+++ b/pkgs/sage-conf_pypi/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py39, py310, py311, py39-user, py310-user, py311-user
+envlist = py310, py311, py312, py313, py310-user, py311-user, py312-user, py313-user
 
 requires =
     # Because of https://github.com/tox-dev/tox/issues/3238, need <4.14.1
