--- a/tox.ini
+++ b/tox.ini
@@ -267,6 +267,8 @@ setenv =
     debian-bookworm:  BASE_TAG=bookworm
     debian-trixie:    BASE_TAG=trixie
     debian-trixie:                             IGNORE_MISSING_SYSTEM_PACKAGES=yes
+    debian-forky:    BASE_TAG=forky
+    debian-forky:                             IGNORE_MISSING_SYSTEM_PACKAGES=yes
     debian-sid:       BASE_TAG=sid
     debian-sid:                                IGNORE_MISSING_SYSTEM_PACKAGES=yes
     #
@@ -911,7 +913,7 @@ setenv =
     #
     DEFAULT_SYSTEM_FACTORS=\
                      ubuntu-{bionic-toolchain-gcc_9,focal,jammy,noble,plucky,questing} \
-                     debian-{bullseye,bookworm,trixie,sid} \
+                     debian-{bullseye,bookworm,trixie,forky,sid} \
                      linuxmint-{20.2,20.3,21,21.1,21.2,21.3,22} \
                      fedora-{30,31,32,33,34,35,36,37,38,39,40,41,42,43} \
                      centos-stream-{9,9-python3.12,10} \
