.github/workflows/ci-macos.yml: Use max-parallel 3

--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -35,6 +35,7 @@ jobs:
     with:
       stage: "1"
       timeout: 14400
+      max_parallel: 3
 
   stage-2:
     uses: ./.github/workflows/macos.yml
