--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -182,7 +182,7 @@ jobs:
           fi
           # Use passagemath-conf wheelhouse for missing wheels of third-party projects
           case "${{ matrix.os }}" in
-              ubuntu*-arm) export SAGE_CONF_TARGETS="gmpy2 memory_allocator";;
+              *) export SAGE_CONF_TARGETS="cysignals";;
           esac
           if [ -n "$SAGE_CONF_TARGETS" ]; then
               case "${{ matrix.os }}" in
