.github/workflows/ci-wheels.yml (workflow-dispatch): As default, test only on ubuntu-latest

--- a/.github/workflows/ci-wheels.yml
+++ b/.github/workflows/ci-wheels.yml
@@ -16,6 +16,8 @@ on:
         required: true
       oss:
         description: 'OSs to test (JSON list; default: all)'
+        default: >-
+          ['ubuntu-latest']
         required: false
   workflow_call:
     inputs:
